--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 
 
-#img {
+img {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -17,13 +17,13 @@
 
 }
 #t1{
-    font-size: 45px;
+    font-size: 70px;
     position: absolute ;
     left: 20%;
     top: 50%;
 }
 #t2{
-    font-size: 40px;
+    font-size: 55px;
     position: absolute ;
     left: 45%;
     top: 60%;
